# conflict_based_search

./: Dockerfile  Doxyfile  README.md  build.sh  docker-compose.yml  run.sh
cpp_files/: CMakeLists.txt  vcpkg.json
cpp_files/include/: AStar.h  ConflictTree.h  ConvertMap.h  definitions.h
cpp_files/src/: AStar.cpp  ConflictTree.cpp  ConvertMap.cpp  main.cpp
cpp_files/tests/: test_benchmark.cpp  test_convertmap.cpp
doc/html/: AStar_8h_source.html  ConflictTree_8h_source.html  ConvertMap_8h_source.html  annotated.html  classAStarGraph-members.html  classAStarGraph.html  classCTree__Node__Comparator-members.html  classCTree__Node__Comparator.html  classConflictTree-members.html  classConflictTree.html  classCost-members.html  classCost.html  classes.html  definitions_8h_source.html  dir_6e5c7e74993d3e57a5e2fc31dd7ad607.html  dir_742aa6fc2b960f25fb70906b301f36d3.html  dir_742aa6fc2b960f25fb70906b301f36d3_dep.map  dir_742aa6fc2b960f25fb70906b301f36d3_dep.md5  dir_80535064b598cfdbd6f90f176fee1607.html  dir_80535064b598cfdbd6f90f176fee1607_dep.map  dir_80535064b598cfdbd6f90f176fee1607_dep.md5  files.html  functions.html  functions_func.html  graph_legend.html  index.html  md_README.html  pages.html  structCTree__Node-members.html  structCTree__Node.html  structConflict__t-members.html  structConflict__t.html  structConflict__t__coll__graph.dot  structConstraint__t-members.html  structConstraint__t.html  structConstraint__t__coll__graph.dot  structProblem__t-members.html  structProblem__t.html  (+5 more)
visualizer/: app.js  index.html  solution.json  style.css
(+70 files in other folders)
